# ten

./: .gitignore  CHANGELOG.md  README.md  a  cabal-build-output  ten-tree  ten.cabal  test-output  test_output1.txt  test_output2_aftercabalclean.txt
app/: Main.hs  TenDaemon.hs
documentation/: Ten-Build.html  Ten-Core.html  Ten-Daemon-State.html  Ten-Derivation.html  Ten-GC.html  Ten-Graph.html  Ten-Hash.html  Ten-Sandbox.html  doc-index-A.html  doc-index-All.html  doc-index-E.html  doc-index-G.html  doc-index-I.html  doc-index-M.html  doc-index-N.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-V.html  ten.haddock
documentation/haddock/: Ten-DB-Core.html  Ten-DB-Derivations.html  Ten-DB-References.html  Ten-DB-Schema.html  Ten-Daemon-Auth.html  Ten-Daemon-Client.html  Ten-Daemon-Protocol.html  Ten-Daemon-Server.html  Ten-Store.html  Ten.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-H.html  doc-index-J.html  doc-index-L.html  doc-index-O.html  doc-index-P.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index.html
documentation/uml/build-sequence/: build-sequence.mmd
documentation/wiki/dao/: 10_37_PropertiesOfAdjunctions.hs  10_38_FreeAndForgetfulAdjunctions.hs  10_39_TenGraphAlgebras.hs  10_40_LambeksLemma.hs  10_41_InitialAlgebraAsAColimit  12_42_IncrementalBuilding.hs  12_43_TerminalFixpointSemantics.hs  12_44_BuildHylomorphism.hs  12_45_TerminalCoalgebraCacheValidation.hs  13_46_MoreExplicitEffects  14_47_FunctorsVersusApplicativesVersusMonads.hs  14_48_ParallelComposition  14_49_ApplicativeParserCombinators.hs  15_50_FreeMonadsForExtensibleDSL.hs  15_51_ContinuationPassingStyle  15_52_ReferentialTransparency  16_53_VisualStringDiagrams.hs  16_54_MonadsFromAdjunctions  16_55_UsingAdjunctionForParallelisationPotentialDiscovery.hs  17_56_CostateComonadStoreAlts.hs  18_57_DayConvolutionFormula.hs  18_58_NinjaYonedaFormula.hs  18_59_CoendsForDependencyResolution.hs  18_60_EndsCoendsImplementation  19_61_TannakianReconstruction  1_1_ptypes  1_2_InterestingSyntaxAndFeaturesPhantomTypes.hs  1_3_SimplifiedEffectTrackingaltto2.hs  2_10_LiquidHaskellForComplexDepProperties  2_10_TemplateHaskellandSingletonsLibrary.hs  2_10_TemplateHaskellandSingletonsLibraryExample.hs  2_11_TrulyOptimised  2_11_X.hs  2_11_Xplanation  2_4_taketwoAdvancedPhaseCatConstruction.hs  2_5_EmulatingDependentTypesInHaskell.hs  2_6_MDPTLessPowerful  2_7_IndexedMonadsVersusDepTypes  2_8_SupposedOptimalStrategy  2_8_X.hs  (+27 more)
documentation/wiki/example_buildplan/: build-plan-summary  build-plan.tex
documentation/wiki/example_buildplan/_minted/: 0572C866D7859ACD0AB39E4D19CE74FE.highlight.minted  0EB8C7FC4BC0FA7EE9B7E89FE05FB220.highlight.minted  10AB8FBE9BA14253F696ECF968276E6E.highlight.minted  129E03F49C3A5276D3A27DF92348B209.highlight.minted  184141ACE1F3E355336AA2E86EB144E6.highlight.minted  3683B50B488BF103E6F887571319788C.highlight.minted  4050520C6A63717EB2701AB9F36A1900.highlight.minted  4E940EFFD66BDEC2CA9DBEC105544069.highlight.minted  7441DDC9A5FD712F5B80E0842DD15CD8.highlight.minted  75CDD3CA855D0D42037393759CA4F22A.highlight.minted  7EE56248491091BBB18688C5D8BAFFE8.highlight.minted  82D09E03C052B4018A022B18A0378FCB.highlight.minted  84F90EC22B7F3CB54C627F03F8EDD952.highlight.minted  86F893C84607C9D3CE9E88596155F0DA.highlight.minted  8D013D46E591FEB04508497790CD2271.highlight.minted  AD2AB7BB09C07679C44ED492E9EA462C.highlight.minted  BB8E54DA41B03299B7454D32B1F77C5B.highlight.minted  C8687C6357FDBA133649CEBAA010B57F.highlight.minted  D0EEFC66E079A04D7E7B6CBCDA277C8F.highlight.minted  D3F0871CEDE7F39D27C2E8A40C6CC662.highlight.minted  D64B65B1CBFAB50B90BDFC2C11779604.highlight.minted  E47E3B0D56C291CBA699BB82319E7458.highlight.minted  F6DDCE6E5AAB10B434501FB0B89614EA.highlight.minted  FEFBBB2F2DFCAD5CFB7E13A2014BF4E1.highlight.minted  _37087AD513301A20779CA7657B729403.index.minted
src/: Ten.hs
src/Ten/: Build.hs  CLI.hs  Core.hs  Derivation.hs  GC.hs  Graph.hs  Hash.hs  Sandbox.hs  Store.hs  text
src/Ten/DB/: Core.hs  Derivations.hs  References.hs  Schema.hs
src/Ten/Daemon/: Auth.hs  Client.hs  Config.hs  Core.hs  Protocol.hs  Server.hs  State.hs
test/: Spec.hs  hello.c
