cabal-version:      3.12
name:               ten
version:            0.1.0.0
synopsis:           A pure functional build system
description:        Ten is a build system with type-level phase separation
homepage:           https://github.com/enzojoly/ten
category:           System
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with:        GHC ==9.8.2

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Ten
                     , Ten.Core
                     , Ten.Hash
                     , Ten.Store
                     , Ten.Derivation
                     , Ten.Build
                     , Ten.Sandbox
                     , Ten.Graph
                     , Ten.GC
                     , Ten.CLI
    build-depends:    base ^>=4.19.0.0
                     , text >=2.0
                     , bytestring >=0.11.4
                     , containers >=0.7
                     , mtl >=2.3
                     , cryptonite >=0.30
                     , directory >=1.3.7
                     , filepath >=1.4.100
                     , process >=1.6.17
                     , time >=1.12
                     , temporary >=1.3
                     , exceptions >=0.10.7
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DataKinds
                       , GADTs
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , FlexibleContexts
                       , LambdaCase
                       , RankNTypes
                       , TypeOperators
                       , OverloadedStrings
                       , ImplicitParams
                       , QuantifiedConstraints
                       , LinearTypes

executable ten
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                     , ten
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite ten-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ^>=4.19.0.0
                     , ten
                     , hspec >=2.11
                     , QuickCheck >=2.14
