cabal-version:      3.12
name:               ten
version:            0.1.0.0
synopsis:           A pure functional build system
description:        Ten is a build system with type-level phase separation
homepage:           https://github.com/enzojoly/ten
category:           System
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with:        GHC ==9.8.2

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Ten
                     , Ten.Core
                     , Ten.Hash
                     , Ten.Store
                     , Ten.Derivation
                     , Ten.Build
                     , Ten.Sandbox
                     , Ten.Graph
                     , Ten.GC
                     , Ten.Daemon.Auth
                     , Ten.Daemon.Client
                     , Ten.Daemon.Protocol
                     , Ten.Daemon.Server
                     , Ten.Daemon.State
                     , Ten.DB.Core
                     , Ten.DB.Derivations
                     , Ten.DB.References
                     , Ten.DB.Schema
    build-depends:    base ^>=4.19.0.0
                     , text >=2.0
                     , bytestring >=0.11.4
                     , containers >=0.7
                     , mtl >=2.3
                     , cryptonite >=0.30
                     , directory >=1.3.7
                     , filepath >=1.4.100
                     , process >=1.6.17
                     , time >=1.12
                     , temporary >=1.3
                     , exceptions >=0.10.7
                     , stm >=2.5.2
                     , singletons >= 3.0
                     , singletons-th >= 3.0
                     , singletons-base >= 3.0
                     , network >=3.1
                     , unix >=2.8.4
                     , unix-bytestring >= 0.3.8
                     , scientific >= 0.3.8
                     , aeson >=2.1
                     , aeson-pretty >=0.8.9
                     , extra >= 1.7.10
                     , uuid >=1.3
                     , uuid-types >=1.0
                     , async >=2.2
                     , memory >=0.18.0
                     , base64-bytestring >=1.2.1
                     , random >=1.2.1
                     , vector >=0.13.2.0
                     , unordered-containers >=0.2.20
                     , sqlite-simple >=0.4.18.0
                     , binary >=0.8.9
                     , mmap >=0.5.9
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DataKinds
                       , GADTs
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , FlexibleContexts
                       , LambdaCase
                       , RankNTypes
                       , TypeOperators
                       , OverloadedStrings
                       , ImplicitParams
                       , QuantifiedConstraints
                       , LinearTypes

executable ten
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                     , ten
                     , text
                     , bytestring
                     , network
                     , unix
                     , directory
                     , filepath
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable ten-daemon
    import:           warnings
    main-is:          TenDaemon.hs
    build-depends:    base ^>=4.19.0.0
                     , ten
                     , text
                     , bytestring
                     , network
                     , unix
                     , directory
                     , filepath
                     , stm
                     , aeson
                     , time
                     , process
                     , async
                     , uuid
                     , memory
                     , base64-bytestring
                     , random
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite ten-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ^>=4.19.0.0
                     , ten
                     , hspec >=2.11
                     , QuickCheck >=2.14
                     , bytestring >=0.11.4
                     , containers >=0.7
                     , text >=2.0
                     , directory >=1.3.7
                     , filepath >=1.4.100
                     , process >=1.6.17
                     , mtl >=2.3
                     , time >=1.12
                     , unix
